# lambda-rust

./: CHANGELOG.md  Dockerfile  Makefile  README.md
.github/workflows/: main.yml
tests/: test.sh
tests/test-func/: Cargo.toml
tests/test-func-with-hooks/: Cargo.toml
tests/test-func-with-hooks/src/: main.rs
tests/test-multi-func/foo/: Cargo.toml
tests/test-multi-func/foo/src/: main.rs
