[package]
name = "test-func-with-hooks"
version = "0.1.0"
authors = ["Abdel FARE <fare.abdel@gmail.com>"]
edition = "2021"

# users don't have to do this
# but when they do, the builder packaging still work
[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.6.1"
serde_json = "1.0.85"
tokio = "1.21.2"